[metadata]
name = k8sapp-kernel-module-management
summary = StarlingX sysinv extensions for kernel-module-management
author = babak sarashki
author_email = babak.sarashki@windriver.com
url = https://www.starlingx.io/
classifier =
	Operating System :: POSIX :: Linux
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9

[files]
packages =
	k8sapp_kernel_module_management

[global]
setup-hooks =
	pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
	kernel-module-management = systemconfig.helm_plugins.kernel_module_management

systemconfig.helm_plugins.kernel_module_management =
	001_kernel-module-management = k8sapp_kernel_module_management.helm.kernel_module_management:KernelModuleManagementHelm

systemconfig.fluxcd.kustomize_ops =
	kernel-module-management = k8sapp_kernel_module_management.kustomize.kustomize_kernel_module_management:KernelModuleManagementFluxCDKustomizeOperator

systemconfig.app_lifecycle =
	kernel-module-management = k8sapp_kernel_module_management.lifecycle.lifecycle_kernel_module_management:KernelModuleManagementAppLifecycleOperator

[bdist_wheel]
universal = 1